<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundLight"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/noNotifications"
        style="@style/NotificationDialogTextView"
        android:text="@string/noNotification" />

    <TextView
        android:id="@+id/tenMinutesBefore"
        style="@style/NotificationDialogTextView"
        android:text="@string/_10_minutes_before" />

    <TextView
        android:id="@+id/fifTeenMinutesBefore"
        style="@style/NotificationDialogTextView"
        android:text="@string/_15_minutes_before" />

    <TextView
        android:id="@+id/thirtyMinutesBefore"
        style="@style/NotificationDialogTextView"
        android:text="@string/_30_minutes_before" />

    <TextView
        android:id="@+id/sixtyMinutesBefore"
        style="@style/NotificationDialogTextView"
        android:text="@string/_1_hour_before" />

    <TextView
        android:id="@+id/customTime"
        style="@style/NotificationDialogTextView"
        android:text="@string/custom" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp" />

</LinearLayout>