<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundLight"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/customNotification"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLine" />

    <EditText
        android:id="@+id/timeCustomEditText"
        android:layout_margin="12dp"
        android:inputType="number"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/minuteBefore"
        style="@style/NotificationCustomDialogTextView"
        android:text="@string/minutesBefore" />

    <TextView
        android:id="@+id/houBefore"
        style="@style/NotificationCustomDialogTextView"
        android:text="@string/hoursBefore" />

    <TextView
        android:id="@+id/dayBefore"
        style="@style/NotificationCustomDialogTextView"
        android:text="@string/daysBefore" />

    <TextView
        android:id="@+id/weekBefore"
        style="@style/NotificationCustomDialogTextView"
        android:text="@string/weeksBefore" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorLine" />

    <TextView
        android:id="@+id/asNotification"
        style="@style/NotificationCustomDialogTextView"
        android:text="@string/asNotification" />

    <!--OPTION FOR NOTIFICATION BY EMAIL-->
    <!--OPTION FOR NOTIFICATION BY EMAIL-->
    <!--OPTION FOR NOTIFICATION BY EMAIL-->
    <TextView
        android:id="@+id/asEmail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/asEmail" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLine" />

    <TextView
        android:id="@+id/doneCustomNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorButton"
        android:gravity="center"
        android:padding="14dp"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />


</LinearLayout>