<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorBackgroundLight"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title5"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/startWith"
        android:background="@color/colorButton"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="normal|bold"
        android:textColor="#FFFFFF"/>

    <RadioGroup
        android:id="@+id/startWithOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/startWithOption1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/schedule"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/startWithOption2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/day"
            android:textSize="16sp" />
        <RadioButton
            android:id="@+id/startWithOption3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/threeDays"
            android:textSize="16sp" />
        <RadioButton
            android:id="@+id/startWithOption4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/week"
            android:textSize="16sp" />
        <RadioButton
            android:id="@+id/startWithOption5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/calendar"
            android:textSize="16sp" />
    </RadioGroup>

</LinearLayout>