<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBackgroundLight"
                tools:context="com.artf.ruacalendar.MainUse">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorBackgroundLight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/goToGoogleStore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="openAppInGooglePlay">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="18dp"
                    android:layout_marginStart="18dp">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_centerInParent="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/starb"/>

                    <ImageView
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_centerInParent="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/star"/>
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:lines="1"
                    android:overScrollMode="never"
                    android:padding="18dp"
                    android:text="@string/fullVersion"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="18dp">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_centerInParent="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/starb"/>

                    <ImageView
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_centerInParent="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/star"/>
                </RelativeLayout>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLine"/>

            <LinearLayout
                android:id="@+id/startWith"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="18dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:overScrollMode="never"
                    android:text="@string/startWith"
                    android:textColor="#000000"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/startWithSelected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:overScrollMode="never"
                    android:textColor="#000000"
                    android:textSize="18sp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLine"/>


            <TextView
                android:id="@+id/sync"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:overScrollMode="never"
                android:padding="18dp"
                android:text="@string/sync"
                android:textColor="#000000"
                android:textSize="18sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLine"/>

            <Switch
                android:id="@+id/hoursFormat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:text="@string/timeFormat"
                android:textSize="18sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLine"/>

            <Switch
                android:id="@+id/notificationsSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:text="@string/notificationsSwitch"
                android:textSize="18sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLine"/>

            <LinearLayout
                android:id="@+id/startOfTheWeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="18dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:overScrollMode="never"
                    android:text="@string/startOfweekDay"
                    android:textColor="#000000"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/startOfweekDaySelected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:overScrollMode="never"
                    android:textColor="#000000"
                    android:textSize="18sp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLine"/>

            <TextView
                android:id="@+id/contactUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:overScrollMode="never"
                android:padding="18dp"
                android:text="@string/contactUs"
                android:textColor="#000000"
                android:textSize="18sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLine"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>